[package]
name = "abci-app-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
futures = "0.3"
tendermint-proto = "0.31"
tendermint = "0.31"
tokio = "1.25"
tower = "0.4"
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci.git" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }